Vanta was causing horizontal scroll to appear, fixed by hiding overflow

--- a/src/App.css
+++ b/src/App.css
@@ -12,22 +12,18 @@
   background: black;
 }
 
-
 .vanta {
-  min-height: 45vh;
-  max-height: 45vh;
-  min-width: 100vw;
-  max-width: 100vw;
+  height: 45vh;
+  max-width: 100%;
+  overflow: hidden;
 }
 .info {
   position: relative;
   z-index: 1;
   display: flex;
   align-items: center;
-  min-height: 45.1vh;
-  max-height: 45.1vh;
-  min-width: 100vw;
-  max-width: 100vw;
+  height: 45.1vh;
+  width: 100%;
   background: linear-gradient(to bottom,rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 1));
 }
 
@@ -36,37 +32,37 @@
 }
 
 .container {
-  margin-left: 20vw;
-  margin-right: 20vw;
+  margin-left: 20%;
+  margin-right: 20%;
+  z-index: 1;
+}
+.container > * {
+  z-index: 1;
 }
 
 .info-title {
   padding-top: 50px;
+  font-size: 50px;
   margin-bottom: 5px;
 }
 .info-desc {
-  font-size: 12px;
+  font-size: 14px;
 }
 .info-desc > p {
   margin: 0 0 5px 0;
 }
 
 .info-links {
-  margin-top: 10px;
+  margin-top: 15px;
 }
 .info-links > a {
-  margin-right: 10px;
+  margin-right: 20px;
 }
 .info-links > a > img {
   width: 20px;
   height: 20px;
 }
-.container {
-  z-index: 1;
-}
-.container > * {
-  z-index: 1;
-}
+
 .projects-title {
   margin-top: 0;
 }
@@ -75,14 +71,25 @@
   display:grid;
   grid-template-columns: 50% 50%;
 }
-
-.project {
-  width: 90%;
-  margin-bottom: 20px;
-}
 .project > * {
   width: inherit;
 }
+.project {
+  width: 95%;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 900px) {
+  .container {
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 100%;
+  }
+  .projects-grid {grid-template-columns: 100%;}
+  .project {width: 95%;}
+}
+
+
 .project-img {
   padding: auto;
   height: 150px;
